# DevIL

./: .gitignore
DevIL/: CMakeLists.txt
DevIL/include/IL/: config.h  devil_internal_exports.h  il.h
DevIL/src-IL/: CMakeLists.txt
DevIL/src-IL/include/: il_dds.h  il_exr.h  il_files.h  il_internal.h  il_manip.h  il_stack.h  il_states.h
DevIL/src-IL/src/: il_convbuff.c  il_convert.c  il_dds-save.c  il_dds.c  il_devil.c  il_files.c  il_internal.c  il_io.c  il_nvidia.cpp  il_png.c  il_register.c  il_rle.c  il_size.c  il_squish.cpp  il_stack.c  il_states.c  il_utility.c
DevIL/src-ILU/: CMakeLists.txt
DevIL/src-ILU/src/: ilu_scale.c
DevIL/src-ILUT/: CMakeLists.txt
