PROJECT(DevIL)

FILE(GLOB DevIL_SRCS src/*.c src/*.cpp)
FILE(GLOB DevIL_INC include/*.h ../include/IL/config.h ../include/IL/devil_internal_exports.h ../include/IL/il.h)
FILE(GLOB DevIL_RSRC)
FILE(GLOB DevIL_TXT)

INCLUDE_DIRECTORIES(

	${DevIL_SOURCE_DIR}/include
	${DevIL_SOURCE_DIR}/../include
)

#SET(DevIL_INC ${DEVIL_INCS} ${DEVIL_SRCS})

SET(LIBRARY_OUTPUT_PATH		${DEVIL_LIB_DEST_DIR}	)

#
# for windows add the .def and .rc files to the source list
#
IF(WIN32)
	#ADD_DEFINITIONS(-DIL_USE_PRAGMA_LIBS)
	SET(CMAKE_C_FLAGS_RELEASE "/MT /O2")
ENDIF(WIN32)

SOURCE_GROUP("Source Files" FILES src/*.c src/*.cpp)
SOURCE_GROUP("Header Files" FILES ${DevIL_INC} )
SOURCE_GROUP("Resource Files" FILES ${DevIL_RSRC} )
SOURCE_GROUP("Text Files" FILES ${DevIL_TXT} )

IF(DEVIL_BUILD_SHARED_LIBS)
	ADD_LIBRARY(DevIL SHARED ${DevIL_SRCS} ${DevIL_INC} ${DevIL_RSRC} ${DevIL_TXT})
	TARGET_COMPILE_DEFINITIONS(DevIL PUBLIC -DIL_DLL -DJPEGSTATIC)
ELSE(DEVIL_BUILD_SHARED_LIBS)
	ADD_LIBRARY(DevIL STATIC ${DevIL_SRCS} ${DevIL_INC} ${DevIL_RSRC} ${DevIL_TXT})
	TARGET_COMPILE_DEFINITIONS(DevIL PUBLIC -DIL_STATIC_LIB -DJPEGSTATIC)
ENDIF(DEVIL_BUILD_SHARED_LIBS)

## add link sub library info

TARGET_LINK_LIBRARIES(DevIL
	#lcms
	#libjpeg
	#libmng
	#libpng
	#libtiff
	#zlib
)

INCLUDE_DIRECTORIES(

	 ${NV_SOURCE_DIR}/src
	 ${NV_SOURCE_DIR}/src/nvtt/squish
	 ${NV_SOURCE_DIR}/extern/poshlib
	 ${LCMS_SOURCE_DIR}
	 ${LIBJPEG_SOURCE_DIR}
	 ${LIBMNG_SOURCE_DIR}
	 ${LIBPNG_SOURCE_DIR}
	 ${LIBTIFF_SOURCE_DIR}
	 ${ZLIB_SOURCE_DIR}
)
