PROJECT(ILU)

FILE(GLOB ILU_SRCS src/*.c)
FILE(GLOB ILU_INC include/*.h ../include/IL/config.h ../include/IL/devil_internal_exports.h ../include/IL/ilu.h)
FILE(GLOB ILU_RSRC)

INCLUDE_DIRECTORIES(

	${ILU_SOURCE_DIR}/include
)

#SET(ILU_SRCS ${ILU_SRCS} ${ILU_INCS} )

SET(LIBRARY_OUTPUT_PATH		${DEVIL_LIB_DEST_DIR}	)

#
# for windows add the .def and .rc files to the source list
#
IF(WIN32)
	#ADD_DEFINITIONS(-DIL_USE_PRAGMA_LIBS)
	SET(CMAKE_C_FLAGS_RELEASE "/MT /O2")
ENDIF(WIN32)


SOURCE_GROUP("Source Files" FILES src/*.c)
SOURCE_GROUP("Header Files" FILES ${ILU_INC} )
SOURCE_GROUP("Resource Files" FILES ${ILU_RSRC} )

# Remove SHARED to create a static library
IF(DEVIL_BUILD_SHARED_LIBS)
	ADD_LIBRARY(ILU SHARED ${ILU_SRCS} ${ILU_INC} ${ILU_RSRC})
	TARGET_COMPILE_DEFINITIONS(ILU PUBLIC -DILU_DLL)
ELSE(DEVIL_BUILD_SHARED_LIBS)
	ADD_LIBRARY(ILU STATIC ${ILU_SRCS} ${ILU_INC} ${ILU_RSRC})
	TARGET_COMPILE_DEFINITIONS(ILU PUBLIC -DIL_STATIC_LIB)
ENDIF(DEVIL_BUILD_SHARED_LIBS)


## add link sub library info

TARGET_LINK_LIBRARIES(ILU

	DevIL
)

INCLUDE_DIRECTORIES(

	${DevIL_SOURCE_DIR}/../include
	${DevIL_SOURCE_DIR}/include
)
